# auto-excel

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-04-13-auto-excel-plan.md  2026-04-14-upgrade-info-commands-plan.md  2026-04-16-formula-aware-preprocessing.md
docs/superpowers/specs/: 2026-04-13-auto-excel-design.md  2026-04-14-upgrade-info-commands-design.md  2026-04-16-formula-aware-preprocessing-design.md
src/auto_excel/: __init__.py  cli.py  config.py  display.py  processor.py  state.py
tests/: conftest.py  test_cli.py  test_column_helpers.py  test_config.py  test_conftest.py  test_display.py  test_empty_rows.py  test_flow1.py  test_flow2.py  test_flow3.py  test_formula_resolution.py  test_integration.py  test_state.py
